# TimeDilation

./: README.md  SIMULATION_VALIDATION.md  latex.aux  latex.out  latex.tex  previous years winner proposals.md  proposal.md
TimeDilationSim/: .DAWN_1.history  CMakeLists.txt  README.md  RESULTS_SUMMARY.md  TimeDilationSim.cc  TimeDilation_Run0_nt_TimeDilation_t0.csv  TimeDilation_Run0_nt_TimeDilation_t1.csv  TimeDilation_Run0_nt_TimeDilation_t10.csv  TimeDilation_Run0_nt_TimeDilation_t11.csv  TimeDilation_Run0_nt_TimeDilation_t12.csv  TimeDilation_Run0_nt_TimeDilation_t13.csv  TimeDilation_Run0_nt_TimeDilation_t14.csv  TimeDilation_Run0_nt_TimeDilation_t15.csv  TimeDilation_Run0_nt_TimeDilation_t2.csv  TimeDilation_Run0_nt_TimeDilation_t3.csv  TimeDilation_Run0_nt_TimeDilation_t4.csv  TimeDilation_Run0_nt_TimeDilation_t5.csv  TimeDilation_Run0_nt_TimeDilation_t6.csv  TimeDilation_Run0_nt_TimeDilation_t7.csv  TimeDilation_Run0_nt_TimeDilation_t8.csv  TimeDilation_Run0_nt_TimeDilation_t9.csv  build.bat  compare_results.py  export_ascii.mac  export_dawn_eps.mac  export_events.mac  export_image.mac  export_multiple_views.mac  export_offscreen_image.mac  export_raytracer_jpg.mac  export_vrml_events.mac  export_vrml_geometry.mac  generate_geant4_vis.sh  run_all.bat  run_x0.mac  setup_env.bat  vis_export.mac  vis_export_ascii.mac  vis_export_raytracer.mac  vis_export_vrml.mac
TimeDilationSim/analysis/: analyze_decay.py  analyze_decay_csv.py  enhance_fig01.py  enhanced_3d_vis.py  fig01_enhanced.py  fig02_enhanced.py  fig03_enhanced.py  fig08_enhanced.py  fig09_10_enhanced.py  (+15 more)
(+94 files in other folders)
